website/websites/u32q/code/revcomp.3.python3.log

Mon, 22 Dec 2008 05:51:41 GMT

MAKE:
mv revcomp.python3-3.python3 revcomp.python3-3.py
/usr/local/src/Python-3.0/python -OO -c "from py_compile import compile; compile('revcomp.python3-3.py')"
  File "revcomp.python3-3.py", line 16
    print seq[i:i+60]
            ^
SyntaxError: invalid syntax

0.04s to complete and log all make actions

COMMAND LINE:
/usr/local/src/Python-3.0/python revcomp.python3-3.pyo 0 < revcomp-input250000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

/usr/local/src/Python-3.0/python: can't open file 'revcomp.python3-3.pyo': [Errno 2] No such file or directory
